--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
 
 	<!-- ========== SCRIPT TAGS ========== -->
+	<!-- Link to Moment.js -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/locale/af.js"></script>
+	
 	<!-- Link to jquery -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
