Fix Moment.js link

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Don't forget my title!</title>
+    <title>Train Time!</title>
 	<!-- Google Fonts -->
 
 	<!-- Materialize Glyphs Stylesheet -->
@@ -19,8 +19,11 @@
 
 	<!-- ========== SCRIPT TAGS ========== -->
 	<!-- Link to Moment.js -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/locale/af.js"></script>
-	
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+
+	<!-- Link to Moment.min.js -->
+	<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script> -->
+
 	<!-- Link to jquery -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
