Add Firebase link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 
 	<!-- ========== SCRIPT TAGS ========== -->
+	<script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+
 	<!-- Link to Moment.js -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
 
