--- a/index.html
+++ b/index.html
@@ -15,7 +15,35 @@
 </head>
 <body>
 
+	<div class="container">
 
+		<!-- First row, w/ children columns -->
+		<!-- Might be able to take out h1 id since using header tag (ie. style using header) -->
+		<div class="row">
+			<header class="col s12">
+				<h1 id="title">Train Time, woo woo</h1>
+			</header>
+		</div>
+
+		<!-- Second row, w/ children columns -->
+		<div class="row">
+			<div class="col s12" id="train-schedule-table">
+				<h2>Current Train Schedule will go here</h2>
+			</div>
+		</div>
+
+		<!-- Third row, w/ children columns -->
+		<div class="row">
+			<div class="col s12" id="add-train-form">
+				<h2>Add Train Form will go here</h2>
+			</div>
+		</div>
+
+
+
+	
+	</div>
+	<!-- ^^Closes overall container class -->
 
 	<!-- ========== SCRIPT TAGS ========== -->
 	<script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
