Add pre tag for testing Firebase sync

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 		<div class="row">
 			<div class="col s12" id="train-schedule-table">
 				<h2>Current Train Schedule will go here</h2>
+
+				<!-- Following along with Firebase example video -->
+				<pre id="object">
+				</pre>
+				
 			</div>
 		</div>
 
