Learning more about Materialize alignment. Add centering classes

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 		<!-- Might be able to take out h1 id since using header tag (ie. style using header) -->
 		<div class="row">
 			<header class="col s12">
-				<h1 id="title">Train Time, woo woo</h1>
+				<h1 class="center-align" id="title">Train Time, woo woo</h1>
 			</header>
 		</div>
 
 		<!-- Second row, w/ children columns -->
 		<div class="row">
-			<div class="col s12" id="train-schedule-table">
+			<div class="col s12 center-align" id="train-schedule-table">
 				<h2>Current Train Schedule will go here</h2>
 
 				<!-- Following along with Firebase example video -->
-				<pre id="object">
+				<pre class="left-align" id="object">
 				</pre>
 				
 			</div>
@@ -39,7 +39,7 @@
 
 		<!-- Third row, w/ children columns -->
 		<div class="row">
-			<div class="col s12" id="add-train-form">
+			<div class="col s12 center-align" id="add-train-form">
 				<h2>Add Train Form will go here</h2>
 			</div>
 		</div>
