Add Google fonts and submit button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Train Time!</title>
 	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700|Montserrat:400" rel="stylesheet">
 
 	<!-- Materialize Glyphs Stylesheet -->
 	<link  rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -33,6 +34,8 @@
 				<!-- Following along with Firebase example video -->
 				<pre class="left-align" id="object">
 				</pre>
+
+				<!-- Train Schedule Table -->
 				
 			</div>
 		</div>
@@ -65,7 +68,7 @@
 				<div class="row">
 					<!-- submit button goes here -->
 					<div class="col s6 offset-s6">
-						<button class="btn waves-effect waves-light" type="submit" id="add-train" name="action">Add Train<i class="material-icons right">send</i>
+						<button class="btn waves-effect waves-light" type="submit" id="add-train" name="action">Add Train<i class="material-icons right">train</i>
 						</button>
 					</div>
 				</div>
