Clean up table code

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						</tr>
 					</thead>
 
-					<tbody>
+					<tbody class="center-align">
 						<!-- <tr>
 							<td class="name">Train 1</td>
 							<td class="destination"></td>
@@ -105,7 +105,7 @@
 
 		<div class="row">
 			<div class="col s12 center-align">
-				<!-- Some kinda train image here? -->
+				<!-- Fancy image here? -->
 				<!-- Following along with Firebase example video -->
 				<pre class="left-align" id="object">
 				</pre>
