Update form tags to help with styling

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<h4>Current Train Schedule</h4>
 
 				<!-- Train Schedule Table -->
-				<table class="striped">
+				<table class="bordered">
 					<thead>
 						<tr>
 							<th>Train Name</th>
@@ -51,12 +51,12 @@
 
 		<!-- Add Train Form -->
 		<div class="row">
-			<fieldset>
-			<form class="col s12 center-align" id="add-train-form">
+			<!-- <fieldset> -->
+			<div class="col s12 center-align" id="add-train-form">
 				<div class="row">
-					<!-- <h5>Add to schedule:</h5> -->
-					<div class="input-field col s6">
-						<input type="text" id="train-name" class="validate">
+					<h4>Schedule Additions</h4>
+					<div class="input-field col s6 ">
+						<input type="text" id="train-name" class="validate ">
 						<label for="train-name">Train Name</label>
 					</div>
 					<div class="input-field col s6">
@@ -77,21 +77,21 @@
 				<div class="row">
 					<div class="col s6 offset-s6">
 						<!-- submit button -->
-						<button class="btn waves-effect waves-light" type="submit" id="add-train" name="action">Add Train<i class="material-icons right">train</i>
+						<button class="btn waves-effect waves-light blue darken-1" type="submit" id="add-train" name="action">Add Train<i class="material-icons right ">train</i>
 						</button>
 					</div>
 				</div>
-			</form>
-			</fieldset>
+			</div>
+			<!-- </fieldset> -->
 		</div>
 
 		<div class="row">
 			<div class="col s12 center-align">
 				<!-- Fancy image here? -->
-				<pre class="left-align" id="object">
+				<!-- <pre class="left-align" id="object"> -->
 				<!-- Following along with Firebase example video -->
 				<!-- Helped to visualize Fb syncing -->
-				</pre>
+				<!-- </pre> -->
 			</div>
 		</div>
 	</div>
