--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 				<div class="row">
 					<div class="input-field col s6">
 						<input type="text" id="first-train-time" class="validate">
-						<label for="first-train-time">First Train Time (HH:MM military time)</label>
+						<label for="first-train-time">First Train Time (ex. 1:00 p)</label>
+						<!-- If you HAVE to do military time on entry, and not do the conversion, then change example back to something HH:mm -->
 					</div>
 					<div class="input-field col s6">
 						<input type="text" id="frequency" class="validate">
@@ -91,7 +92,7 @@
 
 		<div class="row">
 			<div class="col s12 center-align">
-				<!-- Fancy image here? -->
+				<!-- Military conversion chart here? -->
 				<!-- <pre class="left-align" id="object"> -->
 				<!-- Following along with Firebase example video -->
 				<!-- Helped to visualize Fb syncing -->
