Update first time example

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 				<div class="row">
 					<div class="input-field col s6">
 						<input type="text" id="first-train-time" class="validate">
-						<label for="first-train-time">First Train Time (ex. 1:00 p)</label>
-						<!-- If you HAVE to do military time on entry, and not do the conversion, then change example back to something HH:mm -->
+						<label for="first-train-time">First Train Time (ex. 13:00)</label>
+						<!-- If you HAVE to do military time on entry, and not do the conversion, then change example back to something HH:mm First Train Time (ex. 1:00 p) -->
 					</div>
 					<div class="input-field col s6">
 						<input type="text" id="frequency" class="validate">
